--- a/reading-time.yml
+++ b/reading-time.yml
@@ -1,12 +1,12 @@
 name: Reading Time
-version: 1.0.0
-description: "Estimated reading time plugin for Morfy"
+version: 2.0.0
+description: "Estimated reading time plugin for Fansoro"
 author:
   name: Sergey Romanenko
   email: awilum@msn.com
-  url: http://morfy.org
-homepage: https://github.com/morfy-cms/morfy-plugin-reading-time
-bugs: https://github.com/morfy-cms/morfy-plugin-reading-time/issues
+  url: http://fansoro.org
+homepage: https://github.com/fansoro/fansoro-plugin-reading-time
+bugs: https://github.com/fansoro/fansoro-plugin-reading-time/issues
 license: MIT
 
 # Plugin settings
